--- a/README.yaml
+++ b/README.yaml
@@ -5,13 +5,13 @@
 #
 
 # Name of this project
-name : Terraform AWS Alarm Baseline
+name : Terraform AWS Secure Baseline
 
 # License of this project
 license: "MIT"
 
 # Canonical GitHub repo
-github_repo: clouddrove/terraform-aws-alarm-baseline
+github_repo: clouddrove/terraform-aws-secure-baseline
 
 # Badges to display
 badges:
@@ -24,7 +24,7 @@ badges:
 
 #  description of this project
 description: |-
-  Terraform module to create an Cloudwatch Alarm.
+  Terraform module to create an Secure Basline, inclued module is alarm baseline, config baseline, and clouddtrail baseline.
 
 # extra content
 include:
@@ -35,25 +35,18 @@ usage : |-
   ### Simple Example
   Here is an example of how you can use this module in your inventory structure:
   ```hcl
-        module "cloudtrail" {
-        source = "git::https://github.com/clouddrove/terraform-aws-cloudtrail-baseline.git?ref=tags/0.12.1"
-        name        = "trails"
-        application = "clouddrove"
-        environment = "test"
-        label_order = ["environment", "application", "name"]
-        enabled                           = true
-        iam_role_name                     = "CloudTrail-CloudWatch-Delivery-Role"
-        iam_role_policy_name              = "CloudTrail-CloudWatch-Delivery-Policy"
-        account_type                      = "individual"
-        key_deletion_window_in_days       = 10
-        cloudwatch_logs_retention_in_days = 365
-        cloudwatch_logs_group_name        = "cloudtrail-log-group"
-        s3_bucket_name                    = "logs-bucket"
-      }
-        module "alarm_baseline" {
-        source = "git::https://github.com/clouddrove/terraform-aws-alarm-baseline.git?ref=tags/0.12.1"
-        enabled                   = true
-        alarm_namespace           = "CISBenchmark"
-        cloudtrail_log_group_name = module.cloudtrail.log_group.name
-      }
+  module "secure_baseline" {
+    source = "git::https://github.com/clouddrove/terraform-aws-secure-baseline.git?ref=tags/0.12.0"
+    application = "clouddrove"
+    environment = "test"
+    label_order = ["environment", "application", "name"]
+    enabled                           = true
+    key_deletion_window_in_days       = 10
+    cloudwatch_logs_retention_in_days = 365
+    cloudwatch_logs_group_name        = "cloudtrail-log-group"
+    alarm_namespace                   = "Alert_Alarm"
+    s3_bucket_name                    = "cloudtrail-bucket"
+    config_s3_bucket_name             = "config-bucket"
+  }
+
   ```
