--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,6 +42,9 @@ jobs:
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example
+          github_token: '${{ secrets.GITHUB}}'
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
 
   plan:
     name: 'terraform plan'
@@ -68,6 +71,9 @@ jobs:
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example
+          github_token: '${{ secrets.GITHUB}}'
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
 
   pre-commit:
     name: 'Pre-Commit'
