--- a/modules/analyzer/README.yaml
+++ b/modules/analyzer/README.yaml
@@ -9,7 +9,7 @@
 name : Terraform AWS IAM Access Analyzer
 
 # License of this project
-license: "MIT"
+license: "APACHE"
 
 # Canonical GitHub repo
 github_repo: clouddrove/clouddrove/terraform-aws-secure-baseline/modules/analyzer
@@ -17,11 +17,17 @@ github_repo: clouddrove/clouddrove/terraform-aws-secure-baseline/modules/analyze
 # Badges to display
 badges:
   - name: "Terraform"
-    image: "https://img.shields.io/badge/Terraform-v0.12-green"
+    image: "https://img.shields.io/badge/Terraform-v1.1.7-green"
     url: "https://www.terraform.io"
   - name: "Licence"
-    image: "https://img.shields.io/badge/License-MIT-blue.svg"
+    image: "https://img.shields.io/badge/License-APACHE-blue.svg"
     url: "LICENSE.md"
+  - name: "tfsec"
+    image: "https://github.com/clouddrove/terraform-aws-secure-baseline/actions/workflows/tfsec.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-secure-baseline/actions/workflows/tfsec.yml"
+  - name: "static-checks"
+    image: "https://github.com/clouddrove/terraform-aws-secure-baseline/actions/workflows/terraform.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-secure-baseline/actions/workflows/terraform.yml"
 
 #  description of this project
 description: |-
