feat: update workflow for new examples

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,15 +31,21 @@ jobs:
           - ${{ needs.versionExtract.outputs.minVersion }}
           - ${{ needs.versionExtract.outputs.maxVersion }}
         directory:
-          - examples/cloudtrail/complete                      # CloudTrail example to enable Cloudtrail for only current account.
-          - examples/cloudtrail/organisation_account          # CloudTrail example to enable Cloudtrail for all account of organisation.
-          - examples/guardduty/complete                       # GuardDuty example to enable Guardduty for only current account.
-          - examples/guardduty/organisation_account           # GuardDuty example to enable Guardduty for all account of organisation.
-          - examples/security-hub/complete                    # Security-Hub example to enable security for only current account.
-          - examples/security-hub/organisation_account        # Security-Hub example to enable security for all account of organisation.
-          - examples/ebs/complete                             # Default EBS encryption enable Example.
+          # All submodule Examples
+          - examples/cloudtrail/complete                     
+          - examples/cloudtrail/organisation_account       
+          - examples/guardduty/complete                      
+          - examples/guardduty/organisation_account     
+          - examples/security-hub/complete                   
+          - examples/security-hub/organisation_account     
+          - examples/ebs/complete                        
           - examples/analyzer/complete
           - examples/analyzer/organisation_account
+          - examples/alarm/complete
+          - examples/config/complete
+          - examples/iam/complete
+          - examples/inspector/complete
+          - examples/shield/complete
 
     steps:
       - name: Checkout
