--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,5 +8,5 @@ jobs:
     secrets:
       GITHUB: ${{ secrets.GITHUB }}
     with:
-      tfcheck: 'alarm / Check code format / Get min/max versions'
+      tfcheck: 'alarm / Check code format'
 ...
